; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/qcommon/extr_vm_ppc_new.c_InstImmU.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/qcommon/extr_vm_ppc_new.c_InstImmU.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERR_FATAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"VM_Compile: immediate value %i out of range\00", align 1
@buf = common dso_local global i32* null, align 8
@compiledOfs = common dso_local global i64 0, align 8
@pass = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i32, i32, i32)* @InstImmU to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @InstImmU(i8* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = load i32, i32* %10, align 4
  %13 = icmp sgt i32 %12, 65535
  br i1 %13, label %17, label %14

14:                                               ; preds = %5
  %15 = load i32, i32* %10, align 4
  %16 = icmp slt i32 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %14, %5
  %18 = load i32, i32* @ERR_FATAL, align 4
  %19 = load i32, i32* %10, align 4
  %20 = call i32 @Com_Error(i32 %18, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i32 %19)
  br label %21

21:                                               ; preds = %17, %14
  %22 = load i32, i32* %7, align 4
  %23 = load i32, i32* %8, align 4
  %24 = shl i32 %23, 21
  %25 = or i32 %22, %24
  %26 = load i32, i32* %9, align 4
  %27 = shl i32 %26, 16
  %28 = or i32 %25, %27
  %29 = load i32, i32* %10, align 4
  %30 = and i32 %29, 65535
  %31 = or i32 %28, %30
  store i32 %31, i32* %11, align 4
  %32 = load i32, i32* %11, align 4
  %33 = load i32*, i32** @buf, align 8
  %34 = load i64, i64* @compiledOfs, align 8
  %35 = getelementptr inbounds i32, i32* %33, i64 %34
  store i32 %32, i32* %35, align 4
  %36 = load i64, i64* @compiledOfs, align 8
  %37 = add i64 %36, 1
  store i64 %37, i64* @compiledOfs, align 8
  ret void
}

declare dso_local i32 @Com_Error(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
